--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -194,6 +194,26 @@
         android:entries="@array/ETA"
         android:background="#FFF"
         />
+    <TextView
+        android:id="@+id/hospitalText"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Select hospital"
+        android:textColor="#FFF"/>
+    <Spinner
+        android:id="@+id/hospitalSpinnerXML"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:background="#FFF"
+        />
+
     <Button
         android:id="@+id/pictureUpload"
         android:layout_marginTop="20dp"
@@ -228,5 +248,6 @@
         android:text="Return"
         style="@style/personal_buttons"
         />
+
 </LinearLayout>
 </ScrollView>
