--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,59 +2,57 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:background="#151515">
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:background="@drawable/poly_bg"
+    >
+
     <TextView
         android:id = "@+id/home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Homepage"
-        android:textAlignment="center"
-        style="@style/Title"
-
+        style="@style/screen_title"
+        android:layout_marginTop="30dp"
         />
+
+    <View
+        android:id="@+id/breaker"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/home"
+        android:layout_marginTop="10dp"
+        android:background="#979797"
+        />
+
     <Button
         android:id = "@+id/firstTile"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="40dp"
+        style="@style/personal_buttons"
+        android:text="Submit\nED ticket"
         android:layout_below="@+id/home"
-        android:text="Submit Ticket"
-        android:textColor="#FFF"
-        android:background="@drawable/oval_shape"
-        />
+        android:layout_alignLeft="@+id/secondTile"
+        android:layout_alignStart="@+id/secondTile" />
     <Button
         android:id="@+id/secondTile"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/firstTile"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:text="Call 000"
-        android:textColor="#FFF"
         style="@style/personal_buttons"
-        />
-    <Button
-        android:id="@+id/thirdTile"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_below="@+id/home"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="200dp"
-        android:text="Option 3"
-        android:textColor="#FFF"
-        style="@style/personal_buttons"
+        android:layout_below="@+id/firstTile"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp" />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="7dp"
+        android:src="@mipmap/ic_launcher_notext"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         />
 
-    <Button
-        android:id="@+id/fourthTile"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_below="@+id/thirdTile"
-        android:layout_marginTop="10dp"
-        android:text = "Option 4"
-        android:layout_marginLeft="200dp"
-        android:textColor="#FFF"
-        style="@style/personal_buttons"
-        />
     </RelativeLayout>
