--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/common_google_signin_btn_text_light</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -21,14 +21,81 @@
         <item name="android:background">@android:color/holo_blue_bright</item>
     </style>
 
-    <style name="Title">
-        <item name="android:textColor">#FFF</item>
-        <item name="android:textSize">30sp</item>
-        <item name="android:layout_marginTop">10dp</item>
-    </style>
-    <style name="personal_buttons">
-        <item name="android:background">@drawable/oval_shape</item>
-        <item name="android:textColor">#FFF</item>
+    <!--<style name="Title">-->
+        <!--<item name="android:textColor">#FFF</item>-->
+        <!--<item name="android:textSize">30sp</item>-->
+        <!--<item name="android:layout_marginTop">10dp</item>-->
+    <!--</style>-->
 
+    <style name="buttons">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">#4A4A4A</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:background">@drawable/button_gry</item>
+    </style>
+
+    <style name="personal_buttons">
+        <item name="android:background">@drawable/circle</item>
+        <item name="android:textColor">#404040</item>
+        <item name="android:textSize">27sp</item>
+    </style>
+
+    <style name="green_button">
+        <item name="android:background">@drawable/button_brandgrn</item>
+        <item name="android:textColor">#FFF</item>
+    </style>
+
+    <style name="form_label">
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+    </style>
+
+    <style name="form_input">
+        <item name="android:background">@drawable/border</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:textColorHint">#C2C2C2</item>
+        <item name="android:textSize">15dp</item>
+        <item name="android:padding">3dp</item>
+        <item name="android:paddingStart">6dp</item>
+        <item name="android:paddingLeft">6dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+
+    </style>
+
+    <style name="submit_btn">
+        <item name="android:background">@drawable/button_accentgrn</item>
+        <item name="android:layout_width">140dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:text">Submit</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">#FFF</item>
+    </style>
+
+    <style name="spinner_style" >
+        <item name="android:background">@drawable/spinner_bg</item>
+        <item name="android:paddingLeft">6dp</item>
+        <item name="android:padding">3dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_height">40dp</item>
+    </style>
+
+    <style name="screen_title">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="breaker_line">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:background">#979797</item>
     </style>
 </resources>
