--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -98,4 +98,12 @@
         <item name="android:layout_marginTop">30dp</item>
         <item name="android:background">#979797</item>
     </style>
+
+    <style name="free_text"> 
+        <item name="android:gravity">left</item>
+        <item name="android:layout_marginTop">20dp</item> 
+        <item name="android:layout_marginLeft">20dp</item> 
+        <item name="android:layout_marginRight">20dp</item> 
+        <item name="android:textSize">15sp</item> 
+    </style>
 </resources>
