--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,7 @@
             android:inputType="textPersonName"
             android:hint="First Name"
             android:layout_below="@+id/textView"
+            android:maxLength="15"
             style="@style/form_input"
             />
 
@@ -86,6 +87,7 @@
             android:layout_marginRight="20dp"
             android:inputType="textPersonName"
             android:hint="Last Name"
+            android:maxLength="15"
             android:layout_below="@+id/lastname"
             style="@style/form_input"
             />
@@ -109,6 +111,7 @@
             android:layout_marginLeft="20dp"
             android:layout_below="@+id/DOB"
             android:ems="10"
+            android:maxLength="10"
             android:inputType="textPersonName"
             android:hint="DD/MM/YYYY"
             style="@style/form_input"
@@ -134,6 +137,7 @@
             android:layout_alignLeft="@+id/phoneNumber"
             android:background="@drawable/border"
             android:ems="10"
+            android:maxLength="10"
             android:inputType="textPersonName"
             android:hint="04XXXXXXXX"
             style="@style/form_input"
@@ -186,6 +190,7 @@
             android:layout_height="100dp"
             android:layout_below="@+id/textView2"
             android:ems="10"
+            android:maxLength="50"
             android:inputType="textPersonName|textMultiLine"
             android:hint="@string/symptoms"
             android:scrollHorizontally="false"
@@ -222,6 +227,7 @@
             android:layout_height="100dp"
             android:layout_below="@+id/additional"
             android:ems="10"
+            android:maxLength="50"
             android:inputType="textPersonName|textMultiLine"
             android:hint="@string/additional_hint"
             style="@style/form_input"
