--- a/app/src/main/res/layout/insert_medicare.xml
+++ b/app/src/main/res/layout/insert_medicare.xml
@@ -92,6 +92,7 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginRight="20dp"
+            android:maxLength="50"
             android:layout_below="@id/insertMedicareProblem"
             android:hint="@string/symptoms"
             android:gravity="left"
@@ -174,6 +175,7 @@
             android:layout_height="100dp"
             android:layout_below="@+id/additionalTextMedicare"
             android:ems="10"
+            android:maxLength="15"
             android:inputType="textPersonName|textMultiLine"
             android:hint="@string/additional_hint"
             style="@style/form_input"
